--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "mex",
-  "productName": "Mex",
-  "version": "0.3.1-alpha.2",
+  "name": "eba-alpha",
+  "productName": "Eba Alpha",
+  "version": "0.9.1-alpha.1",
   "description": "Mex it to flex it",
   "main": ".webpack/main",
   "scripts": {
@@ -39,6 +39,7 @@
     "husky": "^7.0.4",
     "node-loader": "^2.0.0",
     "ts-loader": "^9.2.2",
+    "ts-node": "^10.7.0",
     "typescript": "^4.0.5"
   },
   "dependencies": {
@@ -50,9 +51,10 @@
     "active-win-universal": "^7.6.2",
     "electron-squirrel-startup": "^1.0.0",
     "ffi-napi": "^4.0.3",
+    "lodash": "^4.17.21",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "robotjs": "^0.6.0",
-    "update-electron-app": "^2.0.1"
+    "semver": "^7.3.6"
   }
 }
