--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "eba-alpha",
   "productName": "Eba Alpha",
-  "version": "0.9.1-alpha.2",
+  "version": "0.9.0-alpha.1",
   "description": "Mex it to flex it",
   "main": ".webpack/main",
   "scripts": {
@@ -10,8 +10,8 @@
     "prebuild": "ts-node build/prepare-build.ts",
     "nativedeps:x64": "./node_modules/.bin/electron-rebuild --force --arch=x64",
     "nativedeps:arm64": "./node_modules/.bin/electron-rebuild --force --arch=arm64",
-    "prepackage:x64": "ts-node build/prepare-build.ts",
-    "prepackage:arm64": "ts-node build/prepare-build.ts",
+    "prepackage:x64": "ts-node build/prepare-build.ts && yarn nativedeps:x64",
+    "prepackage:arm64": "ts-node build/prepare-build.ts && yarn nativedeps:arm64",
     "package:x64": "electron-forge package --arch=x64",
     "package:arm64": "electron-forge package --arch=arm64",
     "prepublish:x64": "yarn package:x64",
